k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: ingress-service
    # higher level config for ingress
    annotations:
      kubernetes.io/ingress.class: nginx
      # tells how to handle traffic request urls rewrites
      nginx.ingress.kubernetes.io/rewrite-target: /$1
# Now configuration for our files
spec:
  rules:
    - http:
        paths:
            - path: /?(.*)
              backend:
                serviceName: client-cluster-ip-service
                servicePort: 3000
            - path: /api/?(.*)
              backend:
                  serviceName: server-cluster-ip-service
                  servicePort: 5000
